<resources>
    <string name="app_name">Family Map</string>
    <string name="host_label">Server Host:</string>
    <string name="port_label">Server Port:</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="fistname_label">First Name:</string>
    <string name="lastname_label">Last Name:</string>
    <string name="email_label">E-mail:</string>
    <string name="gender_label">Gender:</string>
    <string name="login_fail_toast">Failed to login</string>

    <string name="search_option">Search</string>
    <string name="filter_option">Filter</string>
    <string name="settings_option">Settings</string>
    <string name="google_maps_key">AIzaSyBm5rK_ojEdzmqb04Nc4ukGqVALdg_b14Q</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="color_spinner">
        <item>Green</item>
        <item>Blue</item>
        <item>Red</item>
    </string-array>

    <string-array name="map_backgounds">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Terrain</item>
    </string-array>
</resources>
